--- a/styles.css
+++ b/styles.css
@@ -240,16 +240,15 @@ section {
 }
 
 .skills-list {
+    display: flex;
     overflow: hidden; /* Hide overflowing content */
-    position: relative; /* Required for absolute positioning */
 }
 
 .skill-item {
     width: 120px; /* Adjust width of each skill item */
     margin: 1em;
     flex-shrink: 0; /* Prevent items from shrinking */
-    position: absolute; /* Positioning for animation */
-    animation: slideRight 20s linear infinite; /* Adjust animation duration and timing function */
+    position: relative; /* Required for z-index */
 }
 
 .skill-item img {
@@ -266,6 +265,11 @@ section {
     100% {
         transform: translateX(-100%);
     }
+}
+
+/* Animation */
+.skill-item {
+    animation: slideRight 20s linear infinite;
 }
 
 /* Responsive Design */
